# wordle-solver

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  bootstrap.js  build.rs  index.html  package.json  setup.sh  shitty_deploy.sh  shitty_deploy_qa.sh  style.scss  webpack.config.js
data/: 5word_frequencies.txt  allowed_words.txt
doc/: perf_test.txt  size_compile_opts_analysis.txt
src/: app.rs  lib.rs
src/util/: global_key_hook.rs  mod.rs  option_iter.rs  top_k.rs
src/web/: app.rs  global_key_hook.rs  mod.rs  solver_agent.rs
src/wordle/: color.rs  data.rs  game.rs  mod.rs  prelude.rs
