[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4', '-g']

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
demangle-name-section = false

[package]
name = "wordle-site"
version = "0.1.0"
edition = "2021"
authors = ["Joey Sacchini <joey@sacchini.net>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19"
yew-router = "0.16"
wasm-logger = "0.2"
log = "0.4"
wee_alloc = "0.4"
js-sys = "0.3"
serde_json = "1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.web-sys]
version = "0.3"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = "abort"