[package]
name = "wordle-site"
version = "0.1.0"
edition = "2021"
authors = ["Joey Sacchini <joey@sacchini.net>"]

[dependencies]
yew = "0.19"
wasm-logger = "0.2"
log = "0.4"
wee_alloc = "0.4"
wasm-bindgen = "0.2"
thiserror = "1.0"
lazy_static = "1.4"
console_error_panic_hook = "0.1.7"

[dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]

[dependencies.rust-embed]
version = "6.4"
features = ["debug-embed"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "KeyboardEvent",
]


[dev-dependencies]
test-case = "2.0"

[profile.release]
opt-level = 3
lto = 'fat'
codegen-units = 1
panic = 'abort'